# RetroInference

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_android.sh  clean.sh  config.h  copy.sh  dataset_generate.py  generate_dataset.ipynb  gru_generative.ipynb  gru_generative.py  gru_torch.py  gru_train.py  inference.cpp  inference.h  main.cpp  main_okld.cpp  main_prompt.cpp  sentences.txt  simple_sentences.txt  train_log.csv
